--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ body{
     font-size: 1.5rem;
     margin-bottom: 20px;
 }
+.descriptions{
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
 
  .button a{
     text-decoration: none;
@@ -95,6 +99,10 @@ body{
         text-align: center;
     }
     .description{
+        font-size: 1rem;
+    }
+
+    .descriptions{
         font-size: 1rem;
     }
     
