--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,12 @@ body{
     }
     .description{
         font-size: 1rem;
+        text-align: center;
     }
 
     .descriptions{
         font-size: 1rem;
+        text-align: center;
     }
     
     .button a{
